--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Kemai - Kimai client</string>
+   <string>KimaiApp - Kimai client</string>
   </property>
   <property name="locale">
    <locale language="English" country="UnitedStates"/>
